Add theme utilities, upgrade prompts, and enhance license features

--- a/admin/src/translations/de.json
+++ b/admin/src/translations/de.json
@@ -1,37 +1,143 @@
 {
   "plugin.name": "MagicMark",
-  "title": "🔖 Magische Lesezeichen",
-  "subtitle": "Verwalte deine Lesezeichen und Quick-Links",
+  "title": "🔖 MagicMark",
+  "subtitle": "Gefilterte Ansichten für schnellen Zugriff speichern",
   "loading": "Lesezeichen werden geladen...",
-  "empty": "Noch keine Lesezeichen. Erstelle dein erstes Lesezeichen!",
+  "empty.title": "Noch keine Lesezeichen",
+  "empty.description": "Navigiere zu einer beliebigen Content Manager Ansicht, wende Filter an und klicke auf \"Lesezeichen speichern\" um Schnellzugriffs-Shortcuts zu erstellen",
+  
   "stats.pinned": "Angeheftet",
-  "stats.total": "Insgesamt",
-  "button.create": "+ Lesezeichen hinzufügen",
+  "stats.total": "Gesamt",
+  "stats.shared": "Mit mir geteilt",
+  "stats.limit": "Lesezeichen-Limit",
+  "stats.limitReached": "Limit erreicht - Upgrade",
+  
+  "button.create": "+ Lesezeichen speichern",
+  "button.save": "Lesezeichen speichern",
   "button.cancel": "Abbrechen",
   "button.update": "Aktualisieren",
   "button.edit": "Bearbeiten",
   "button.delete": "Löschen",
   "button.pin": "Anheften",
-  "button.unpin": "Loslösen",
+  "button.unpin": "Lösen",
+  
   "confirm.delete": "Möchtest du dieses Lesezeichen wirklich löschen?",
-  "modal.create": "Neues Lesezeichen erstellen",
+  
+  "modal.create": "Als Lesezeichen speichern",
   "modal.edit": "Lesezeichen bearbeiten",
-  "form.emoji": "Symbol auswählen",
+  
+  "form.emoji": "Symbol wählen",
   "form.selectEmoji": "Klicken zum Auswählen",
-  "form.name": "Name des Lesezeichens",
-  "form.url": "URL",
-  "form.urlHelp": "Gib die vollständige URL mit https:// ein",
-  "form.description": "Beschreibung (optional)",
-  "error.nameRequired": "Name erforderlich",
-  "error.urlRequired": "URL erforderlich",
-  "error.invalidUrl": "Bitte gib eine gültige URL ein (z.B. https://example.com)",
-  "error.save": "Fehler beim Speichern des Lesezeichens",
-  "table.emoji": "Symbol",
+  "form.name": "Lesezeichen-Name",
+  "form.namePlaceholder": "z.B. Veröffentlichte Artikel",
+  "form.path": "Content Manager Pfad",
+  "form.pathHelp": "Automatisch vom Content Manager erfasst",
+  "form.query": "Filter & Sortierung",
+  "form.queryHelp": "Diese Filter werden wiederhergestellt, wenn du auf dieses Lesezeichen klickst",
+  "form.filterPreview": "Erfasste Filter & Einstellungen",
+  "form.description": "Beschreibung (Optional)",
+  "form.descriptionPlaceholder": "Beschreibung hinzufügen...",
+  "form.sharing": "Freigabe-Optionen",
+  "form.publicAccess": "Öffentlich (Alle Admin-Benutzer können dieses Lesezeichen sehen)",
+  "form.shareWithRoles": "Mit bestimmten Rollen teilen:",
+  "form.shareWithUsers": "Mit bestimmten Benutzern teilen:",
+  "form.selected": "{count} ausgewählt",
+  "form.loadingRoles": "Rollen werden geladen...",
+  "form.loadingUsers": "Benutzer werden geladen...",
+  "form.noRoles": "Keine Rollen verfügbar",
+  "form.noUsers": "Keine anderen Benutzer verfügbar",
+  "form.roleDisabled": "Rollenauswahl deaktiviert wenn Lesezeichen öffentlich ist",
+  "form.userDisabled": "Benutzerauswahl deaktiviert wenn Lesezeichen öffentlich ist",
+  "form.customRole": "(Benutzerdefiniert)",
+  "form.roleUsers": "({count} Benutzer)",
+  "form.roleUsersPlural": "({count} Benutzer)",
+  
+  "error.nameRequired": "Name ist erforderlich",
+  "error.pathRequired": "Pfad ist erforderlich",
+  "error.save": "Lesezeichen konnte nicht gespeichert werden",
+  
+  "table.emoji": "Emoji",
   "table.name": "Name",
-  "table.url": "URL",
+  "table.filters": "Filter",
   "table.description": "Beschreibung",
   "table.status": "Status",
   "table.actions": "Aktionen",
+  
+  "bookmark.myBookmark": "Mein Lesezeichen",
+  "bookmark.sharedBy": "Geteilt von {name}",
+  "bookmark.public": "Öffentlich",
+  "bookmark.roles": "Rollen: {list}",
+  "bookmark.users": "Benutzer: {list}",
+  "bookmark.unknown": "Unbekannt",
+  
+  "shared.title": "🤝 Mit dir geteilt",
+  "shared.count": "{count} Lesezeichen wurde mit dir geteilt",
+  "shared.countPlural": "{count} Lesezeichen wurden mit dir geteilt",
+  "shared.byCreator": "{count} Lesezeichen",
+  "shared.byCreatorPlural": "{count} Lesezeichen",
+  
+  "allBookmarks.title": "🔖 Alle verfügbaren Lesezeichen",
+  
+  "search.placeholder": "Suche nach Name, Beschreibung...",
+  "filter.all": "Alle anzeigen",
+  "filter.pinned": "Nur angeheftete",
+  "filter.unpinned": "Nur nicht angeheftete",
+  "filter.placeholder": "Filter",
+  "entries.placeholder": "Einträge",
+  "entries.10": "10 Einträge",
+  "entries.25": "25 Einträge",
+  "entries.50": "50 Einträge",
+  "entries.100": "100 Einträge",
+  
+  "upgrade.premiumFeature": "Premium-Funktion",
+  "upgrade.advancedFeature": "Erweiterte Funktion",
+  "upgrade.description": "{feature} ist eine {tier}-Funktion. Upgrade um diese und mehr freizuschalten.",
+  "upgrade.button": "Upgrade",
+  "upgrade.unlockTitle": "{feature} freischalten",
+  "upgrade.upgradeNow": "Jetzt upgraden",
+  "upgrade.tierFeature": "{tier} Funktion",
+  "upgrade.locked": "{feature} ist gesperrt",
+  "upgrade.upgradeTo": "Upgrade auf {tier}",
+  
+  "upgradePage.title": "Wähle deinen Plan",
+  "upgradePage.subtitle": "Schalte leistungsstarke Lesezeichen-Funktionen für deine Strapi-Anwendung frei",
+  "upgradePage.mostPopular": "AM BELIEBTESTEN",
+  "upgradePage.loading": "Lizenzinformationen werden geladen...",
+  "upgradePage.currentPlan": "AKTUELLER PLAN",
+  "upgradePage.downgrade": "Downgrade",
+  "upgradePage.bookmarks": "Lesezeichen:",
+  "upgradePage.support": "Support:",
+  "upgradePage.free.name": "KOSTENLOS",
+  "upgradePage.free.description": "Perfekt für kleine Projekte und Tests",
+  "upgradePage.premium.name": "PREMIUM",
+  "upgradePage.premium.description": "Erweiterte Funktionen für wachsende Teams",
+  "upgradePage.advanced.name": "ERWEITERT",
+  "upgradePage.advanced.description": "Maximale Funktionen für Power-User",
+  "upgradePage.forever": "für immer",
+  "upgradePage.perMonth": "/Monat",
+  "upgradePage.features.bookmarks10": "10 Lesezeichen",
+  "upgradePage.features.bookmarks50": "50 Lesezeichen",
+  "upgradePage.features.bookmarksUnlimited": "Unbegrenzte Lesezeichen",
+  "upgradePage.features.advancedFilters": "Erweiterte Filter",
+  "upgradePage.features.roleSharing": "Rollen-Freigabe",
+  "upgradePage.features.dragDrop": "Drag & Drop",
+  "upgradePage.features.quickAccess": "Schnellzugriff",
+  "upgradePage.features.queryHistory": "Abfrageverlauf",
+  "upgradePage.features.export": "Lesezeichen exportieren",
+  "upgradePage.features.analytics": "Analysen",
+  "upgradePage.features.analyticsDashboard": "Analyse-Dashboard",
+  "upgradePage.features.bulkOperations": "Massenoperationen",
+  "upgradePage.features.customIntegrations": "Benutzerdefinierte Integrationen",
+  "upgradePage.features.prioritySupport": "Prioritäts-Support",
+  "upgradePage.features.priorityPhoneSupport": "Prioritäts- + Telefon-Support",
+  "upgradePage.support.community": "Community",
+  "upgradePage.support.priority": "Priorität",
+  "upgradePage.support.priorityPhone": "Priorität + Telefon",
+  "upgradePage.limits.unlimited": "Unbegrenzt",
+  
+  "ViewsWidget.actions.create": "Lesezeichen speichern",
+  "ViewsWidget.actions.showList": "Magicmark",
+  
   "Admin.MainMenu.PluginName": "MagicMark",
   "settings.title": "MagicMark",
   "settings.license": "Lizenz"
