--- a/admin/src/translations/en.json
+++ b/admin/src/translations/en.json
@@ -3,9 +3,15 @@
   "title": "🔖 MagicMark",
   "subtitle": "Save filtered views for quick access",
   "loading": "Loading bookmarks...",
-  "empty": "No bookmarks yet. Save your first filtered view!",
+  "empty.title": "No bookmarks yet",
+  "empty.description": "Navigate to any Content Manager view, apply filters, and click \"Save Bookmark\" to create quick access shortcuts",
+  
   "stats.pinned": "Pinned",
   "stats.total": "Total",
+  "stats.shared": "Shared with Me",
+  "stats.limit": "Bookmark Limit",
+  "stats.limitReached": "Limit Reached - Upgrade",
+  
   "button.create": "+ Save Bookmark",
   "button.save": "Save Bookmark",
   "button.cancel": "Cancel",
@@ -14,29 +20,124 @@
   "button.delete": "Delete",
   "button.pin": "Pin",
   "button.unpin": "Unpin",
+  
   "confirm.delete": "Are you sure you want to delete this bookmark?",
+  
   "modal.create": "Save as Bookmark",
   "modal.edit": "Edit Bookmark",
+  
   "form.emoji": "Choose Icon",
   "form.selectEmoji": "Click to select",
   "form.name": "Bookmark Name",
+  "form.namePlaceholder": "e.g., Published Articles",
   "form.path": "Content Manager Path",
   "form.pathHelp": "Automatically captured from Content Manager",
   "form.query": "Filters & Sorting",
   "form.queryHelp": "These filters will be restored when you click this bookmark",
   "form.filterPreview": "Captured Filters & Settings",
   "form.description": "Description (Optional)",
+  "form.descriptionPlaceholder": "Add a description...",
+  "form.sharing": "Sharing Options",
+  "form.publicAccess": "Public (All admin users can see this bookmark)",
+  "form.shareWithRoles": "Share with specific roles:",
+  "form.shareWithUsers": "Share with specific users:",
+  "form.selected": "{count} selected",
+  "form.loadingRoles": "Loading roles...",
+  "form.loadingUsers": "Loading users...",
+  "form.noRoles": "No roles available",
+  "form.noUsers": "No other users available",
+  "form.roleDisabled": "Role selection disabled when bookmark is public",
+  "form.userDisabled": "User selection disabled when bookmark is public",
+  "form.customRole": "(Custom)",
+  "form.roleUsers": "({count} user)",
+  "form.roleUsersPlural": "({count} users)",
+  
   "error.nameRequired": "Name is required",
   "error.pathRequired": "Path is required",
   "error.save": "Failed to save bookmark",
+  
   "table.emoji": "Emoji",
   "table.name": "Name",
   "table.filters": "Filters",
   "table.description": "Description",
   "table.status": "Status",
   "table.actions": "Actions",
+  
+  "bookmark.myBookmark": "My Bookmark",
+  "bookmark.sharedBy": "Shared by {name}",
+  "bookmark.public": "Public",
+  "bookmark.roles": "Roles: {list}",
+  "bookmark.users": "Users: {list}",
+  "bookmark.unknown": "Unknown",
+  
+  "shared.title": "🤝 Shared with You",
+  "shared.count": "{count} bookmark has been shared with you",
+  "shared.countPlural": "{count} bookmarks have been shared with you",
+  "shared.byCreator": "{count} bookmark",
+  "shared.byCreatorPlural": "{count} bookmarks",
+  
+  "allBookmarks.title": "🔖 All Available Bookmarks",
+  
+  "search.placeholder": "Search by name, description...",
+  "filter.all": "Show All",
+  "filter.pinned": "Pinned Only",
+  "filter.unpinned": "Unpinned Only",
+  "filter.placeholder": "Filter",
+  "entries.placeholder": "Entries",
+  "entries.10": "10 entries",
+  "entries.25": "25 entries",
+  "entries.50": "50 entries",
+  "entries.100": "100 entries",
+  
+  "upgrade.premiumFeature": "Premium Feature",
+  "upgrade.advancedFeature": "Advanced Feature",
+  "upgrade.description": "{feature} is a {tier} feature. Upgrade to unlock this and more.",
+  "upgrade.button": "Upgrade",
+  "upgrade.unlockTitle": "Unlock {feature}",
+  "upgrade.upgradeNow": "Upgrade Now",
+  "upgrade.tierFeature": "{tier} Feature",
+  "upgrade.locked": "{feature} is locked",
+  "upgrade.upgradeTo": "Upgrade to {tier}",
+  
+  "upgradePage.title": "Choose Your Plan",
+  "upgradePage.subtitle": "Unlock powerful bookmarking features for your Strapi application",
+  "upgradePage.mostPopular": "MOST POPULAR",
+  "upgradePage.loading": "Loading license information...",
+  "upgradePage.currentPlan": "CURRENT PLAN",
+  "upgradePage.downgrade": "Downgrade",
+  "upgradePage.bookmarks": "Bookmarks:",
+  "upgradePage.support": "Support:",
+  "upgradePage.free.name": "FREE",
+  "upgradePage.free.description": "Perfect for small projects and testing",
+  "upgradePage.premium.name": "PREMIUM",
+  "upgradePage.premium.description": "Enhanced features for growing teams",
+  "upgradePage.advanced.name": "ADVANCED",
+  "upgradePage.advanced.description": "Maximum features for power users",
+  "upgradePage.forever": "forever",
+  "upgradePage.perMonth": "/month",
+  "upgradePage.features.bookmarks10": "10 Bookmarks",
+  "upgradePage.features.bookmarks50": "50 Bookmarks",
+  "upgradePage.features.bookmarksUnlimited": "Unlimited Bookmarks",
+  "upgradePage.features.advancedFilters": "Advanced Filters",
+  "upgradePage.features.roleSharing": "Role Sharing",
+  "upgradePage.features.dragDrop": "Drag & Drop",
+  "upgradePage.features.quickAccess": "Quick Access",
+  "upgradePage.features.queryHistory": "Query History",
+  "upgradePage.features.export": "Export Bookmarks",
+  "upgradePage.features.analytics": "Analytics",
+  "upgradePage.features.analyticsDashboard": "Analytics Dashboard",
+  "upgradePage.features.bulkOperations": "Bulk Operations",
+  "upgradePage.features.customIntegrations": "Custom Integrations",
+  "upgradePage.features.prioritySupport": "Priority Support",
+  "upgradePage.features.priorityPhoneSupport": "Priority + Phone Support",
+  "upgradePage.support.community": "Community",
+  "upgradePage.support.priority": "Priority",
+  "upgradePage.support.priorityPhone": "Priority + Phone",
+  "upgradePage.limits.unlimited": "Unlimited",
+  
   "ViewsWidget.actions.create": "Save Bookmark",
   "ViewsWidget.actions.showList": "Magicmark",
+  
   "Admin.MainMenu.PluginName": "MagicMark",
   "settings.title": "MagicMark",
   "settings.license": "License"
