--- a/admin/src/translations/es.json
+++ b/admin/src/translations/es.json
@@ -1,11 +1,17 @@
 {
   "plugin.name": "MagicMark",
   "title": "🔖 MagicMark",
-  "subtitle": "Guarda vistas filtradas para acceso rápido",
+  "subtitle": "Guardar vistas filtradas para acceso rápido",
   "loading": "Cargando marcadores...",
-  "empty": "Aún no hay marcadores. ¡Guarda tu primera vista filtrada!",
+  "empty.title": "Aún no hay marcadores",
+  "empty.description": "Navega a cualquier vista del Content Manager, aplica filtros y haz clic en \"Guardar marcador\" para crear accesos directos rápidos",
+  
   "stats.pinned": "Fijados",
   "stats.total": "Total",
+  "stats.shared": "Compartidos conmigo",
+  "stats.limit": "Límite de marcadores",
+  "stats.limitReached": "Límite alcanzado - Actualizar",
+  
   "button.create": "+ Guardar marcador",
   "button.save": "Guardar marcador",
   "button.cancel": "Cancelar",
@@ -14,31 +20,125 @@
   "button.delete": "Eliminar",
   "button.pin": "Fijar",
   "button.unpin": "Desfijar",
+  
   "confirm.delete": "¿Estás seguro de que quieres eliminar este marcador?",
+  
   "modal.create": "Guardar como marcador",
   "modal.edit": "Editar marcador",
+  
   "form.emoji": "Elegir icono",
-  "form.selectEmoji": "Haz clic para seleccionar",
+  "form.selectEmoji": "Clic para seleccionar",
   "form.name": "Nombre del marcador",
-  "form.path": "Ruta del gestor de contenido",
-  "form.pathHelp": "Capturado automáticamente desde el gestor de contenido",
+  "form.namePlaceholder": "ej., Artículos publicados",
+  "form.path": "Ruta del Content Manager",
+  "form.pathHelp": "Capturado automáticamente del Content Manager",
   "form.query": "Filtros y ordenación",
   "form.queryHelp": "Estos filtros se restaurarán cuando hagas clic en este marcador",
-  "form.filterPreview": "Filtros y configuración capturados",
+  "form.filterPreview": "Filtros y configuraciones capturados",
   "form.description": "Descripción (Opcional)",
+  "form.descriptionPlaceholder": "Añadir una descripción...",
+  "form.sharing": "Opciones de compartir",
+  "form.publicAccess": "Público (Todos los usuarios admin pueden ver este marcador)",
+  "form.shareWithRoles": "Compartir con roles específicos:",
+  "form.shareWithUsers": "Compartir con usuarios específicos:",
+  "form.selected": "{count} seleccionados",
+  "form.loadingRoles": "Cargando roles...",
+  "form.loadingUsers": "Cargando usuarios...",
+  "form.noRoles": "No hay roles disponibles",
+  "form.noUsers": "No hay otros usuarios disponibles",
+  "form.roleDisabled": "Selección de roles deshabilitada cuando el marcador es público",
+  "form.userDisabled": "Selección de usuarios deshabilitada cuando el marcador es público",
+  "form.customRole": "(Personalizado)",
+  "form.roleUsers": "({count} usuario)",
+  "form.roleUsersPlural": "({count} usuarios)",
+  
   "error.nameRequired": "El nombre es obligatorio",
   "error.pathRequired": "La ruta es obligatoria",
   "error.save": "Error al guardar el marcador",
+  
   "table.emoji": "Emoji",
   "table.name": "Nombre",
   "table.filters": "Filtros",
   "table.description": "Descripción",
   "table.status": "Estado",
   "table.actions": "Acciones",
+  
+  "bookmark.myBookmark": "Mi marcador",
+  "bookmark.sharedBy": "Compartido por {name}",
+  "bookmark.public": "Público",
+  "bookmark.roles": "Roles: {list}",
+  "bookmark.users": "Usuarios: {list}",
+  "bookmark.unknown": "Desconocido",
+  
+  "shared.title": "🤝 Compartidos contigo",
+  "shared.count": "{count} marcador ha sido compartido contigo",
+  "shared.countPlural": "{count} marcadores han sido compartidos contigo",
+  "shared.byCreator": "{count} marcador",
+  "shared.byCreatorPlural": "{count} marcadores",
+  
+  "allBookmarks.title": "🔖 Todos los marcadores disponibles",
+  
+  "search.placeholder": "Buscar por nombre, descripción...",
+  "filter.all": "Mostrar todos",
+  "filter.pinned": "Solo fijados",
+  "filter.unpinned": "Solo no fijados",
+  "filter.placeholder": "Filtro",
+  "entries.placeholder": "Entradas",
+  "entries.10": "10 entradas",
+  "entries.25": "25 entradas",
+  "entries.50": "50 entradas",
+  "entries.100": "100 entradas",
+  
+  "upgrade.premiumFeature": "Función Premium",
+  "upgrade.advancedFeature": "Función Avanzada",
+  "upgrade.description": "{feature} es una función {tier}. Actualiza para desbloquear esta y más.",
+  "upgrade.button": "Actualizar",
+  "upgrade.unlockTitle": "Desbloquear {feature}",
+  "upgrade.upgradeNow": "Actualizar ahora",
+  "upgrade.tierFeature": "Función {tier}",
+  "upgrade.locked": "{feature} está bloqueado",
+  "upgrade.upgradeTo": "Actualizar a {tier}",
+  
+  "upgradePage.title": "Elige tu plan",
+  "upgradePage.subtitle": "Desbloquea potentes funciones de marcadores para tu aplicación Strapi",
+  "upgradePage.mostPopular": "MÁS POPULAR",
+  "upgradePage.loading": "Cargando información de licencia...",
+  "upgradePage.currentPlan": "PLAN ACTUAL",
+  "upgradePage.downgrade": "Degradar",
+  "upgradePage.bookmarks": "Marcadores:",
+  "upgradePage.support": "Soporte:",
+  "upgradePage.free.name": "GRATIS",
+  "upgradePage.free.description": "Perfecto para proyectos pequeños y pruebas",
+  "upgradePage.premium.name": "PREMIUM",
+  "upgradePage.premium.description": "Funciones mejoradas para equipos en crecimiento",
+  "upgradePage.advanced.name": "AVANZADO",
+  "upgradePage.advanced.description": "Máximas funciones para usuarios avanzados",
+  "upgradePage.forever": "para siempre",
+  "upgradePage.perMonth": "/mes",
+  "upgradePage.features.bookmarks10": "10 marcadores",
+  "upgradePage.features.bookmarks50": "50 marcadores",
+  "upgradePage.features.bookmarksUnlimited": "Marcadores ilimitados",
+  "upgradePage.features.advancedFilters": "Filtros avanzados",
+  "upgradePage.features.roleSharing": "Compartir por roles",
+  "upgradePage.features.dragDrop": "Arrastrar y soltar",
+  "upgradePage.features.quickAccess": "Acceso rápido",
+  "upgradePage.features.queryHistory": "Historial de consultas",
+  "upgradePage.features.export": "Exportar marcadores",
+  "upgradePage.features.analytics": "Análisis",
+  "upgradePage.features.analyticsDashboard": "Panel de análisis",
+  "upgradePage.features.bulkOperations": "Operaciones masivas",
+  "upgradePage.features.customIntegrations": "Integraciones personalizadas",
+  "upgradePage.features.prioritySupport": "Soporte prioritario",
+  "upgradePage.features.priorityPhoneSupport": "Soporte prioritario + telefónico",
+  "upgradePage.support.community": "Comunidad",
+  "upgradePage.support.priority": "Prioritario",
+  "upgradePage.support.priorityPhone": "Prioritario + Teléfono",
+  "upgradePage.limits.unlimited": "Ilimitado",
+  
   "ViewsWidget.actions.create": "Guardar marcador",
   "ViewsWidget.actions.showList": "Magicmark",
+  
   "Admin.MainMenu.PluginName": "MagicMark",
   "settings.title": "MagicMark",
   "settings.license": "Licencia"
 }
-
