--- a/admin/src/translations/fr.json
+++ b/admin/src/translations/fr.json
@@ -1,11 +1,17 @@
 {
   "plugin.name": "MagicMark",
   "title": "🔖 MagicMark",
-  "subtitle": "Enregistrez les vues filtrées pour un accès rapide",
+  "subtitle": "Enregistrer les vues filtrées pour un accès rapide",
   "loading": "Chargement des signets...",
-  "empty": "Pas encore de signets. Enregistrez votre première vue filtrée !",
+  "empty.title": "Pas encore de signets",
+  "empty.description": "Naviguez vers n'importe quelle vue du Content Manager, appliquez des filtres et cliquez sur \"Enregistrer le signet\" pour créer des raccourcis d'accès rapide",
+  
   "stats.pinned": "Épinglés",
   "stats.total": "Total",
+  "stats.shared": "Partagés avec moi",
+  "stats.limit": "Limite de signets",
+  "stats.limitReached": "Limite atteinte - Mettre à niveau",
+  
   "button.create": "+ Enregistrer le signet",
   "button.save": "Enregistrer le signet",
   "button.cancel": "Annuler",
@@ -14,31 +20,125 @@
   "button.delete": "Supprimer",
   "button.pin": "Épingler",
   "button.unpin": "Désépingler",
+  
   "confirm.delete": "Êtes-vous sûr de vouloir supprimer ce signet ?",
+  
   "modal.create": "Enregistrer comme signet",
   "modal.edit": "Modifier le signet",
+  
   "form.emoji": "Choisir l'icône",
-  "form.selectEmoji": "Cliquer pour sélectionner",
+  "form.selectEmoji": "Cliquez pour sélectionner",
   "form.name": "Nom du signet",
-  "form.path": "Chemin du gestionnaire de contenu",
-  "form.pathHelp": "Automatiquement capturé depuis le gestionnaire de contenu",
+  "form.namePlaceholder": "ex., Articles publiés",
+  "form.path": "Chemin du Content Manager",
+  "form.pathHelp": "Capturé automatiquement depuis le Content Manager",
   "form.query": "Filtres et tri",
   "form.queryHelp": "Ces filtres seront restaurés lorsque vous cliquerez sur ce signet",
   "form.filterPreview": "Filtres et paramètres capturés",
   "form.description": "Description (Optionnel)",
+  "form.descriptionPlaceholder": "Ajouter une description...",
+  "form.sharing": "Options de partage",
+  "form.publicAccess": "Public (Tous les utilisateurs admin peuvent voir ce signet)",
+  "form.shareWithRoles": "Partager avec des rôles spécifiques :",
+  "form.shareWithUsers": "Partager avec des utilisateurs spécifiques :",
+  "form.selected": "{count} sélectionnés",
+  "form.loadingRoles": "Chargement des rôles...",
+  "form.loadingUsers": "Chargement des utilisateurs...",
+  "form.noRoles": "Aucun rôle disponible",
+  "form.noUsers": "Aucun autre utilisateur disponible",
+  "form.roleDisabled": "Sélection des rôles désactivée quand le signet est public",
+  "form.userDisabled": "Sélection des utilisateurs désactivée quand le signet est public",
+  "form.customRole": "(Personnalisé)",
+  "form.roleUsers": "({count} utilisateur)",
+  "form.roleUsersPlural": "({count} utilisateurs)",
+  
   "error.nameRequired": "Le nom est requis",
   "error.pathRequired": "Le chemin est requis",
   "error.save": "Échec de l'enregistrement du signet",
+  
   "table.emoji": "Emoji",
   "table.name": "Nom",
   "table.filters": "Filtres",
   "table.description": "Description",
   "table.status": "Statut",
   "table.actions": "Actions",
+  
+  "bookmark.myBookmark": "Mon signet",
+  "bookmark.sharedBy": "Partagé par {name}",
+  "bookmark.public": "Public",
+  "bookmark.roles": "Rôles : {list}",
+  "bookmark.users": "Utilisateurs : {list}",
+  "bookmark.unknown": "Inconnu",
+  
+  "shared.title": "🤝 Partagés avec vous",
+  "shared.count": "{count} signet a été partagé avec vous",
+  "shared.countPlural": "{count} signets ont été partagés avec vous",
+  "shared.byCreator": "{count} signet",
+  "shared.byCreatorPlural": "{count} signets",
+  
+  "allBookmarks.title": "🔖 Tous les signets disponibles",
+  
+  "search.placeholder": "Rechercher par nom, description...",
+  "filter.all": "Afficher tout",
+  "filter.pinned": "Épinglés uniquement",
+  "filter.unpinned": "Non épinglés uniquement",
+  "filter.placeholder": "Filtre",
+  "entries.placeholder": "Entrées",
+  "entries.10": "10 entrées",
+  "entries.25": "25 entrées",
+  "entries.50": "50 entrées",
+  "entries.100": "100 entrées",
+  
+  "upgrade.premiumFeature": "Fonctionnalité Premium",
+  "upgrade.advancedFeature": "Fonctionnalité Avancée",
+  "upgrade.description": "{feature} est une fonctionnalité {tier}. Mettez à niveau pour débloquer celle-ci et plus encore.",
+  "upgrade.button": "Mettre à niveau",
+  "upgrade.unlockTitle": "Débloquer {feature}",
+  "upgrade.upgradeNow": "Mettre à niveau maintenant",
+  "upgrade.tierFeature": "Fonctionnalité {tier}",
+  "upgrade.locked": "{feature} est verrouillé",
+  "upgrade.upgradeTo": "Mettre à niveau vers {tier}",
+  
+  "upgradePage.title": "Choisissez votre plan",
+  "upgradePage.subtitle": "Débloquez des fonctionnalités de signets puissantes pour votre application Strapi",
+  "upgradePage.mostPopular": "LE PLUS POPULAIRE",
+  "upgradePage.loading": "Chargement des informations de licence...",
+  "upgradePage.currentPlan": "PLAN ACTUEL",
+  "upgradePage.downgrade": "Rétrograder",
+  "upgradePage.bookmarks": "Signets :",
+  "upgradePage.support": "Support :",
+  "upgradePage.free.name": "GRATUIT",
+  "upgradePage.free.description": "Parfait pour les petits projets et les tests",
+  "upgradePage.premium.name": "PREMIUM",
+  "upgradePage.premium.description": "Fonctionnalités améliorées pour les équipes en croissance",
+  "upgradePage.advanced.name": "AVANCÉ",
+  "upgradePage.advanced.description": "Fonctionnalités maximales pour les utilisateurs avancés",
+  "upgradePage.forever": "pour toujours",
+  "upgradePage.perMonth": "/mois",
+  "upgradePage.features.bookmarks10": "10 signets",
+  "upgradePage.features.bookmarks50": "50 signets",
+  "upgradePage.features.bookmarksUnlimited": "Signets illimités",
+  "upgradePage.features.advancedFilters": "Filtres avancés",
+  "upgradePage.features.roleSharing": "Partage par rôles",
+  "upgradePage.features.dragDrop": "Glisser-déposer",
+  "upgradePage.features.quickAccess": "Accès rapide",
+  "upgradePage.features.queryHistory": "Historique des requêtes",
+  "upgradePage.features.export": "Exporter les signets",
+  "upgradePage.features.analytics": "Analyses",
+  "upgradePage.features.analyticsDashboard": "Tableau de bord analytique",
+  "upgradePage.features.bulkOperations": "Opérations en masse",
+  "upgradePage.features.customIntegrations": "Intégrations personnalisées",
+  "upgradePage.features.prioritySupport": "Support prioritaire",
+  "upgradePage.features.priorityPhoneSupport": "Support prioritaire + téléphonique",
+  "upgradePage.support.community": "Communauté",
+  "upgradePage.support.priority": "Prioritaire",
+  "upgradePage.support.priorityPhone": "Prioritaire + Téléphone",
+  "upgradePage.limits.unlimited": "Illimité",
+  
   "ViewsWidget.actions.create": "Enregistrer le signet",
   "ViewsWidget.actions.showList": "Magicmark",
+  
   "Admin.MainMenu.PluginName": "MagicMark",
   "settings.title": "MagicMark",
   "settings.license": "Licence"
 }
-
