--- a/admin/src/translations/pt.json
+++ b/admin/src/translations/pt.json
@@ -1,11 +1,17 @@
 {
   "plugin.name": "MagicMark",
   "title": "🔖 MagicMark",
-  "subtitle": "Salve visualizações filtradas para acesso rápido",
+  "subtitle": "Salvar visualizações filtradas para acesso rápido",
   "loading": "Carregando marcadores...",
-  "empty": "Ainda não há marcadores. Salve sua primeira visualização filtrada!",
+  "empty.title": "Ainda não há marcadores",
+  "empty.description": "Navegue para qualquer visualização do Content Manager, aplique filtros e clique em \"Salvar Marcador\" para criar atalhos de acesso rápido",
+  
   "stats.pinned": "Fixados",
   "stats.total": "Total",
+  "stats.shared": "Compartilhados comigo",
+  "stats.limit": "Limite de marcadores",
+  "stats.limitReached": "Limite atingido - Atualizar",
+  
   "button.create": "+ Salvar marcador",
   "button.save": "Salvar marcador",
   "button.cancel": "Cancelar",
@@ -14,31 +20,125 @@
   "button.delete": "Excluir",
   "button.pin": "Fixar",
   "button.unpin": "Desfixar",
+  
   "confirm.delete": "Tem certeza de que deseja excluir este marcador?",
+  
   "modal.create": "Salvar como marcador",
   "modal.edit": "Editar marcador",
+  
   "form.emoji": "Escolher ícone",
   "form.selectEmoji": "Clique para selecionar",
   "form.name": "Nome do marcador",
-  "form.path": "Caminho do gerenciador de conteúdo",
-  "form.pathHelp": "Capturado automaticamente do gerenciador de conteúdo",
+  "form.namePlaceholder": "ex., Artigos publicados",
+  "form.path": "Caminho do Content Manager",
+  "form.pathHelp": "Capturado automaticamente do Content Manager",
   "form.query": "Filtros e ordenação",
   "form.queryHelp": "Estes filtros serão restaurados quando você clicar neste marcador",
   "form.filterPreview": "Filtros e configurações capturados",
   "form.description": "Descrição (Opcional)",
-  "error.nameRequired": "O nome é obrigatório",
-  "error.pathRequired": "O caminho é obrigatório",
+  "form.descriptionPlaceholder": "Adicionar uma descrição...",
+  "form.sharing": "Opções de compartilhamento",
+  "form.publicAccess": "Público (Todos os usuários admin podem ver este marcador)",
+  "form.shareWithRoles": "Compartilhar com papéis específicos:",
+  "form.shareWithUsers": "Compartilhar com usuários específicos:",
+  "form.selected": "{count} selecionados",
+  "form.loadingRoles": "Carregando papéis...",
+  "form.loadingUsers": "Carregando usuários...",
+  "form.noRoles": "Nenhum papel disponível",
+  "form.noUsers": "Nenhum outro usuário disponível",
+  "form.roleDisabled": "Seleção de papéis desabilitada quando o marcador é público",
+  "form.userDisabled": "Seleção de usuários desabilitada quando o marcador é público",
+  "form.customRole": "(Personalizado)",
+  "form.roleUsers": "({count} usuário)",
+  "form.roleUsersPlural": "({count} usuários)",
+  
+  "error.nameRequired": "Nome é obrigatório",
+  "error.pathRequired": "Caminho é obrigatório",
   "error.save": "Falha ao salvar o marcador",
+  
   "table.emoji": "Emoji",
   "table.name": "Nome",
   "table.filters": "Filtros",
   "table.description": "Descrição",
   "table.status": "Status",
   "table.actions": "Ações",
+  
+  "bookmark.myBookmark": "Meu marcador",
+  "bookmark.sharedBy": "Compartilhado por {name}",
+  "bookmark.public": "Público",
+  "bookmark.roles": "Papéis: {list}",
+  "bookmark.users": "Usuários: {list}",
+  "bookmark.unknown": "Desconhecido",
+  
+  "shared.title": "🤝 Compartilhados com você",
+  "shared.count": "{count} marcador foi compartilhado com você",
+  "shared.countPlural": "{count} marcadores foram compartilhados com você",
+  "shared.byCreator": "{count} marcador",
+  "shared.byCreatorPlural": "{count} marcadores",
+  
+  "allBookmarks.title": "🔖 Todos os marcadores disponíveis",
+  
+  "search.placeholder": "Pesquisar por nome, descrição...",
+  "filter.all": "Mostrar todos",
+  "filter.pinned": "Apenas fixados",
+  "filter.unpinned": "Apenas não fixados",
+  "filter.placeholder": "Filtro",
+  "entries.placeholder": "Entradas",
+  "entries.10": "10 entradas",
+  "entries.25": "25 entradas",
+  "entries.50": "50 entradas",
+  "entries.100": "100 entradas",
+  
+  "upgrade.premiumFeature": "Recurso Premium",
+  "upgrade.advancedFeature": "Recurso Avançado",
+  "upgrade.description": "{feature} é um recurso {tier}. Atualize para desbloquear este e mais.",
+  "upgrade.button": "Atualizar",
+  "upgrade.unlockTitle": "Desbloquear {feature}",
+  "upgrade.upgradeNow": "Atualizar agora",
+  "upgrade.tierFeature": "Recurso {tier}",
+  "upgrade.locked": "{feature} está bloqueado",
+  "upgrade.upgradeTo": "Atualizar para {tier}",
+  
+  "upgradePage.title": "Escolha seu plano",
+  "upgradePage.subtitle": "Desbloqueie recursos poderosos de marcadores para sua aplicação Strapi",
+  "upgradePage.mostPopular": "MAIS POPULAR",
+  "upgradePage.loading": "Carregando informações de licença...",
+  "upgradePage.currentPlan": "PLANO ATUAL",
+  "upgradePage.downgrade": "Rebaixar",
+  "upgradePage.bookmarks": "Marcadores:",
+  "upgradePage.support": "Suporte:",
+  "upgradePage.free.name": "GRATUITO",
+  "upgradePage.free.description": "Perfeito para projetos pequenos e testes",
+  "upgradePage.premium.name": "PREMIUM",
+  "upgradePage.premium.description": "Recursos aprimorados para equipes em crescimento",
+  "upgradePage.advanced.name": "AVANÇADO",
+  "upgradePage.advanced.description": "Recursos máximos para usuários avançados",
+  "upgradePage.forever": "para sempre",
+  "upgradePage.perMonth": "/mês",
+  "upgradePage.features.bookmarks10": "10 marcadores",
+  "upgradePage.features.bookmarks50": "50 marcadores",
+  "upgradePage.features.bookmarksUnlimited": "Marcadores ilimitados",
+  "upgradePage.features.advancedFilters": "Filtros avançados",
+  "upgradePage.features.roleSharing": "Compartilhamento por papéis",
+  "upgradePage.features.dragDrop": "Arrastar e soltar",
+  "upgradePage.features.quickAccess": "Acesso rápido",
+  "upgradePage.features.queryHistory": "Histórico de consultas",
+  "upgradePage.features.export": "Exportar marcadores",
+  "upgradePage.features.analytics": "Análises",
+  "upgradePage.features.analyticsDashboard": "Painel de análises",
+  "upgradePage.features.bulkOperations": "Operações em massa",
+  "upgradePage.features.customIntegrations": "Integrações personalizadas",
+  "upgradePage.features.prioritySupport": "Suporte prioritário",
+  "upgradePage.features.priorityPhoneSupport": "Suporte prioritário + telefônico",
+  "upgradePage.support.community": "Comunidade",
+  "upgradePage.support.priority": "Prioritário",
+  "upgradePage.support.priorityPhone": "Prioritário + Telefone",
+  "upgradePage.limits.unlimited": "Ilimitado",
+  
   "ViewsWidget.actions.create": "Salvar marcador",
   "ViewsWidget.actions.showList": "Magicmark",
+  
   "Admin.MainMenu.PluginName": "MagicMark",
   "settings.title": "MagicMark",
   "settings.license": "Licença"
 }
-
